2004-03-20  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gdk.override (_wrap_gdk_atom_intern): Override; return
	Py_None if gdk_atom_intern returns GDK_NONE.  Fixes #137093
	"gtk.gdk.atom_intern always creates an atom".
	(headers): Add protype for have_numpy() to avoid later
	implicit declaration warning.

2004-03-11  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* examples/pygtk-demo/demos/itemfactory.py (main): Add
	expand=False to packing of menubar in window, so that it doesn't
	stretch with the window.

=== PyGTK 2.2.0 ===

2004-03-11  Johan Dahlin  <johan@gnome.org>

	* configure.in: Bump version

	* setup.py (MINOR_VERSION): Bump version

	* NEWS: Update

2004-03-09  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* codegen/code-coverage.py: utility to scan the unmatched symbols
	from the binded libraries. Written by James Henstridge (see bug
	#71465)

2004-03-09  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	Fixes #136597 (gtkgl still referenced in build files)
	* gtk/.cvsignore:
	* gtk/makefile.msc:
	Removed references to gtkgl.

2004-03-09  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.override (pygdk_filter_func_marshal): Impl.
	(_wrap_gdk_window_add_filter): Impl.

2004-03-08  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* configure.in: Remove leftover definition of gtkgl_required_version.

	* gobjectmodule.c (pyg_enum_add_constants): Delegate to
	pyg_flags_add_constants if the GType is really a flags type
	instead of enum.
	(pyg_flags_add_constants): Delegate to pyg_enum_add_constants if
	the GType is really a enum type instead of flags.  Based on John
	Ehresman's patch.  Fixes (better) #136204 (GtkTextSearchFlags warning).

2004-03-07  Hagen Moebius  <hagen.moebius@starschiffchen.de>
 
         * codegen/docextract.py: avoid the non-uniform behavior of gtk-doc
         to have an imaginary "returns" parameter. it is converted into the
         <return>-tag.
