@@ -1,5 +1,9 @@
 2004-03-20  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
+	* gtk/gtkmodule.c (init_gtk): Define constants for the predefined
+	atoms listed in <gdk/gdkselection.h>.  Fixes #137091 ("constants"
+	for selection atoms).
+
 	* gtk/gdk.override (_wrap_gdk_atom_intern): Override; return
 	Py_None if gdk_atom_intern returns GDK_NONE.  Fixes #137093
 	"gtk.gdk.atom_intern always creates an atom".
